--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
           <a class="secondary-button" href="#">
             See more examples <i class="fa-solid fa-arrow-right"></i>
           </a>
-          
+
         </div>
         <div class="example-area flex"> <!-- Fixed class name from 'exmaple-area' to 'example-area' -->
           <div class="example-card flex">
             <h3>Can user complete a task in my software interface?</h3>
-          </div>
+          git remote add origin https://github.com/SrishtiDev/usability-srish.git</div>
           <div class="example-card flex">
             <h3>Can user complete a task in my software interface?</h3>
           </div>
