--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header>
       <div class="container flex header-section">
         <div class="header-left flex">
-          <h2>Design Confidently</h2>
+          <h2>Srishti Rawat</h2>
           <p>
             Usability is a remote user research platform that takes the
             guesswork out of design decisions by validating them with real
